--- a/css/main.css
+++ b/css/main.css
@@ -114,11 +114,13 @@ button:hover {
 }
 
 .gamecontainer {
-    height: calc(100vh - (75px + 25px));
+    height: 100vh;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 15px;
+    margin: 0;
+    padding: 0;
 }
 
 #gameInfo {
